adjust the files for the computation of the test set

--- a/sceneGraph_update/result_overview.ipynb
+++ b/sceneGraph_update/result_overview.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -17,95 +17,31 @@
      "output_type": "stream",
      "text": [
       "Precision\n",
-      "Votes          1         2         3         4         5         6         7         8         9\n",
-      "Poitns                                                                                          \n",
-      "5       0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "10      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "15      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "20      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "25      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "30      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "35      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "40      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "45      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "50      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "60      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "70      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "80      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
-      "90      0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349  0.850349\n",
       "\n",
       "Recall\n",
-      "Votes          1         2         3         4         5         6         7         8         9\n",
-      "Points                                                                                          \n",
-      "5       0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "10      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "15      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "20      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "25      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "30      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "35      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "40      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "45      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "50      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "60      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "70      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "80      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
-      "90      0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333  0.833333\n",
       "\n",
       "F1\n",
-      "Votes          1         2         3         4         5         6         7         8         9\n",
-      "Poitns                                                                                          \n",
-      "5       0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "10      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "15      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "20      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "25      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "30      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "35      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "40      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "45      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "50      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "60      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "70      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "80      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
-      "90      0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758  0.823758\n",
       "\n",
       "Box IoU\n",
-      "Votes          1         2         3         4         5         6         7         8         9\n",
-      "Poitns                                                                                          \n",
-      "5       0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "10      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "15      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "20      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "25      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "30      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "35      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "40      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "45      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "50      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "60      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "70      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "80      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
-      "90      0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925  0.429925\n",
       "\n",
       "Center Distance\n",
-      "Votes         1        2        3        4        5        6        7        8        9\n",
-      "Poitns                                                                                 \n",
-      "5       0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "10      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "15      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "20      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "25      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "30      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "35      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "40      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "45      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "50      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "60      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "70      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "80      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "90      0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102  0.32102\n",
-      "The highest F1 score is 0.8238, achieved at threshold 5 and K-Means value 1.\n"
+      "Votes          1         2         3         4         5         6         7         8         9\n",
+      "Poitns                                                                                          \n",
+      "5       0.993361  0.963780  0.977648  0.960790  0.971002  0.863388  0.641329  0.516147  0.397493\n",
+      "10      0.945382  0.911926  0.922688  0.923105  0.927984  0.805750  0.554672  0.474742  0.347074\n",
+      "15      0.901296  0.867221  0.877354  0.874702  0.843622  0.708865  0.475715  0.397408  0.295389\n",
+      "20      0.883373  0.848367  0.867675  0.869051  0.835966  0.702732  0.468851  0.393098  0.293554\n",
+      "25      0.874682  0.841939  0.861463  0.863716  0.835330  0.700904  0.468412  0.393566  0.298595\n",
+      "30      0.863691  0.838830  0.854663  0.858533  0.816449  0.700384  0.468214  0.392754  0.298779\n",
+      "35      0.852997  0.829231  0.845103  0.847846  0.810701  0.702499  0.464741  0.389746  0.295494\n",
+      "40      0.845380  0.825214  0.844609  0.854678  0.810909  0.702773  0.464355  0.388340  0.294153\n",
+      "45      0.840171  0.818827  0.840801  0.852392  0.809236  0.702198  0.460272  0.391481  0.297526\n",
+      "50      0.834935  0.820326  0.841912  0.856817  0.807228  0.702673  0.438323  0.368343  0.273074\n",
+      "60      0.838468  0.825953  0.845847  0.861020  0.799982  0.688063  0.423068  0.351312  0.265937\n",
+      "70      0.838223  0.827080  0.845327  0.860150  0.802798  0.691081  0.425855  0.352262  0.263708\n",
+      "80      0.837554  0.827344  0.844910  0.859356  0.805822  0.689747  0.420742  0.347329  0.265391\n",
+      "90      0.843087  0.834499  0.847699  0.865265  0.815715  0.692687  0.423378  0.347041  0.265309\n",
+      "The highest F1 score is 0.6019, achieved at threshold 10 and K-Means value 1.\n"
      ]
     }
    ],
@@ -121,7 +57,7 @@
     "import h5py\n",
     "import os.path as osp\n",
     "\n",
-    "threshold = \"0.1\"\n",
+    "threshold = \"0.5\"\n",
     "final_precision = []\n",
     "final_recall = []\n",
     "final_f1 = []\n",
@@ -157,11 +93,12 @@
     "# final_boxes.extend(result.get(\"box_iou\", None))\n",
     "# final_centers.extend(result.get(\"box_iou\", None))\n",
     "\n",
-    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction_dummy.pkl\")\n",
+    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction.pkl\")\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
     "final_precision = result.get(\"precision\", None)\n",
+    "#print(final_precision)\n",
     "final_recall = result.get(\"recall\", None)\n",
     "final_f1 = result.get(\"f1\", None)\n",
     "final_boxes = result.get(\"iou_boxes\", None)\n",
@@ -213,13 +150,13 @@
     "\n",
     "# Display the tables\n",
     "print(\"Precision\")\n",
-    "print(df_precision)\n",
+    "#print(df_precision)\n",
     "print(\"\\nRecall\")\n",
-    "print(df_recall)\n",
+    "#print(df_recall)\n",
     "print(\"\\nF1\")\n",
-    "print(df_f1)\n",
+    "#print(df_f1)\n",
     "print(\"\\nBox IoU\")\n",
-    "print(df_boxes)\n",
+    "#print(df_boxes)\n",
     "print(\"\\nCenter Distance\")\n",
     "print(df_centers)\n",
     "\n",
