--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -412,29 +412,20 @@
      "output_type": "stream",
      "text": [
       "Precision AVG\n",
-      "K-Means          1         3         5         7         9        11        13\n",
-      "Threshold                                                                     \n",
-      "-0.1       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
-      "-0.2       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
-      "-0.3       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
-      "-0.4       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
+      "K-Means           5\n",
+      "Threshold          \n",
+      "0.0        0.528138\n",
       "\n",
       "Recall AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.1       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
-      "-0.2       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
-      "-0.3       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
-      "-0.4       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
+      "K-Means           5\n",
+      "Threshold          \n",
+      "0.0        0.523704\n",
       "\n",
       "F1 AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.1       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
-      "-0.2       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
-      "-0.3       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
-      "-0.4       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
-      "The highest F1 score is 0.5537, achieved at threshold -0.1 and K-Means value 1.\n"
+      "K-Means           5\n",
+      "Threshold          \n",
+      "0.0        0.505419\n",
+      "The highest F1 score is 0.5054, achieved at threshold 0.0 and K-Means value 5.\n"
      ]
     }
    ],
@@ -455,7 +446,7 @@
     "# final_f1_2.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results_2/avg/statistics_segmentation_tryout_median_120.180.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/testset.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -477,8 +468,8 @@
     "final_recall_2 = np.mean(final_recall_2, axis=0)\n",
     "final_f1_2= np.mean(final_f1_2, axis= 0)\n",
     "\n",
-    "k_means= [1,3,5,7,9,11,13]\n",
-    "threshold= [-0.1,-0.2,-0.3,-0.4]\n",
+    "k_means= [5] #[1,3,5,7,9,11,13]\n",
+    "threshold= [0.0] #[-0.1,-0.2,-0.3,-0.4]\n",
     "\n",
     "# Create a DataFrame for each metric\n",
     "df_precision = pd.DataFrame(final_precision_2, index=threshold, columns=k_means)\n",
@@ -820,7 +811,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "matching data {'1': 14, '2': 1, '3': 29, '4': 29, '5': 4, '6': 1}\n",
       "No object is mapped to ID 0.\n"
      ]
     }
@@ -835,8 +825,8 @@
     "    for frame_idx, matches in matching_data.items():\n",
     "        # Check if any object is mapped to 0 in this frame\n",
     "        for obj_id, mapped_id in matches.items():\n",
-    "            if mapped_id == 0:\n",
-    "                print(f\"Object ID {obj_id} in frame {frame_idx} is mapped to ID 0.\")\n",
+    "            if mapped_id < 0:\n",
+    "                print(f\"Object ID {obj_id} in frame {frame_idx} is mapped to ID new obj.\")\n",
     "                return True  # If found, exit early\n",
     "\n",
     "    print(\"No object is mapped to ID 0.\")\n",
