--- a/sceneGraph_update/visualization_pointclouds.ipynb
+++ b/sceneGraph_update/visualization_pointclouds.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -52,14 +49,14 @@
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "#scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
-    "curr_scan_id =  \"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\"#\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
-    "new_scan_id =  \"fcf66d8a-622d-291c-8429-0e1109c6bb26\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
+    "curr_scan_id = \"0f2f271b-b736-2f71-8f3a-e9265463abcb\" #\"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\"#\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
+    "new_scan_id =  \"0f2f271d-b736-2f71-8d77-dfc428e30c1e\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\" #\"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def acces_predicted_objects(scan_id):\n",
     "    all_centers = {}\n",
-    "    filename = osp.join(\"/media/ekoller/T7/Predicted_Centers\", scan_id + \".pkl\")\n",
+    "    filename = osp.join(\"/media/ekoller/T7/Predicted_Centers\", scan_id + \".h5\")\n",
     "    with h5py.File(filename, 'r') as h5file:\n",
     "        for obj_id in h5file.keys():\n",
     "            obj_group = h5file[obj_id]\n",
@@ -136,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +150,16 @@
     "# Iterate over all objects in all_centers\n",
     "for obj_id, data in all_centers.items():\n",
     "    #print(\"hey object added\" , obj_id)\n",
-    "    points = data['points']  # Get points\n",
-    "    color = np.array(obj_colors[obj_id], dtype=np.float32)\n",
-    "    color = np.reshape(color, (3,))\n",
-    "    color = color / 255.0\n",
+    "\n",
+    "    if obj_id not in obj_colors:\n",
+    "         color = [0,0,0]\n",
+    "\n",
+    "    else: \n",
+    "         \n",
+    "        points = data['points']  # Get points\n",
+    "        color = np.array(obj_colors[obj_id], dtype=np.float32)\n",
+    "        color = np.reshape(color, (3,))\n",
+    "        color = color / 255.0\n",
     "\n",
     "    #color = np.array(obj_colors[obj_id])/255.0 # Generate a unique color for this object ID\n",
     "    #color = np.random.rand(3)\n",
