--- a/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
+++ b/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
@@ -203,9 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'osp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 74\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;66;03m# # Set a uniform color for all centroids\u001b[39;00m\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;66;03m# centroid_pcd.colors = o3d.utility.Vector3dVector([color] * len(centroid_points))\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m#     sphere.paint_uniform_color(color)\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m#     spheres.append(sphere)\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m centroid_pcd, spheres\n\u001b[0;32m---> 74\u001b[0m data_ref \u001b[38;5;241m=\u001b[39m\u001b[43mosp\u001b[49m\u001b[38;5;241m.\u001b[39mjoin(scenes_dir, curr_scan_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     75\u001b[0m ref_pointcloud \u001b[38;5;241m=\u001b[39m load_point_cloud_from_npy(data_ref)\n\u001b[1;32m     77\u001b[0m data_rescan \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(scenes_dir, new_scan_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'osp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
