--- a/matching/visualization.ipynb
+++ b/matching/visualization.ipynb
@@ -221,7 +221,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this code segment is here to visualize the cosine similarity between seen and unseen objcets\n",
+    "segmentation_info = {}\n",
+    "segmentation_info_path = osp.join(\"/media/ekoller/T7/Segmentation/DinoV2/objects\", new_scan_id + \".h5\")\n",
+    "with h5py.File(segmentation_info_path, 'r') as hdf_file:\n",
+    "             for frame_idx in hdf_file.keys():\n",
+    "                #init boxlist for curr frame\n",
+    "                bounding_boxes = []\n",
+    "                \n",
+    "                # get info \n",
+    "                frame_group = hdf_file[frame_idx]\n",
+    "                \n",
+    "                #iterate over each boundingbox\n",
+    "                for bbox_key in frame_group.keys():\n",
+    "                    bbox_group = frame_group[bbox_key]\n",
+    "                    \n",
+    "                    #get te obj id\n",
+    "                    object_id = bbox_group.attrs['object_id']\n",
+    "                    \n",
+    "                    #get the boundingbox\n",
+    "                    bbox = bbox_group['bbox'][:]\n",
+    "                    \n",
+    "                    # get the maskt\n",
+    "                    mask = bbox_group['mask'][:]\n",
+    "                    \n",
+    "                    # append to list\n",
+    "                    bounding_boxes.append({\n",
+    "                        'object_id': object_id,\n",
+    "                        'bbox': bbox,\n",
+    "                        'mask': mask\n",
+    "                    })\n",
+    "                \n",
+    "                # stor it to the corresponding frame\n",
+    "                segmentation_info[frame_idx] = bounding_boxes\n",
+    "\n",
+    "def read_ref_data(ref_path):\n",
+    "        features = {}\n",
+    "\n",
+    "        # Open the HDF5 file for reading\n",
+    "        with h5py.File(ref_path, 'r') as hdf_file:\n",
+    "            # Iterate over each object ID (which corresponds to the dataset keys)\n",
+    "            for object_key in hdf_file.keys():\n",
+    "                # Read the dataset corresponding to the object_key\n",
+    "                stacked_features = hdf_file[object_key][:]\n",
+    "                \n",
+    "                # Convert the string key back to the original object_id if necessary\n",
+    "                object_id = object_key\n",
+    "                \n",
+    "                # Store the feature list in the dictionary\n",
+    "                features[int(object_id)] = [stacked_features[i] for i in range(stacked_features.shape[0])]\n",
+    "\n",
+    "        return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5179,82 +5238,7 @@
       "       [0, 0, 0, ..., 0, 0, 0],\n",
       "       [0, 0, 0, ..., 0, 0, 0],\n",
       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)}]}\n",
-      "unique numbers in new img patchwise  [ 1.  2.  4.  5.  7. 10. 12. 13. 14. 16.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  4. 10. 11. 12. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  6. 10. 11. 13. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  4.  8. 10. 11. 13. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  4. 10. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  8. 10. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  5. 10. 13. 15.]\n",
-      "unique numbers in new img patchwise  [ 1. 10. 11. 13. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  4.  5.  6.  7. 10. 11. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  5.  6. 10. 11. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5.  6. 10. 11. 13. 14. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3.  5.  6. 10. 11. 13. 16.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5. 10. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  6. 10. 13. 14. 22.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 13. 14.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5.  6. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3.  4.  5.  6.  7.  9. 10. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 2.  5.  6. 10. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  6. 10. 11. 12.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 12.]\n",
-      "unique numbers in new img patchwise  [ 1.  2. 10. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3. 10. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  6. 10. 12.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3.  4.  6.  9. 10. 12.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3.  6.  7.  9. 10. 12.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  3.  6.  7.  9. 10. 12.]\n",
-      "unique numbers in new img patchwise  [2. 3. 4. 9.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5.  6. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  6. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5.  6.  8. 10. 11. 13. 16.]\n",
-      "unique numbers in new img patchwise  [ 1.  2.  5.  6. 10. 11. 13. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  5.  6. 10. 11. 12. 13.]\n",
-      "unique numbers in new img patchwise  [ 1.  5.  6. 10. 11. 12. 13. 15.]\n",
-      "unique numbers in new img patchwise  [ 1.  5. 10. 11.]\n",
-      "unique numbers in new img patchwise  [ 1.  5.  8. 11.]\n",
-      "unique numbers in new img patchwise  [1. 2. 5.]\n",
-      "unique numbers in new img patchwise  [1. 8.]\n",
-      "unique numbers in new img patchwise  [1. 8.]\n",
-      "unique numbers in new img patchwise  [ 1.  8. 11.]\n",
-      "unique numbers in new img patchwise  [1. 7. 8.]\n",
-      "unique numbers in new img patchwise  [1. 7.]\n",
-      "unique numbers in new img patchwise  [1. 7.]\n",
-      "unique numbers in new img patchwise  [1. 6. 7.]\n",
-      "unique numbers in new img patchwise  [2. 6.]\n",
-      "unique numbers in new img patchwise  [ 2. 10.]\n",
-      "unique numbers in new img patchwise  [ 3.  7.  8. 10.]\n",
-      "unique numbers in new img patchwise  [ 1.  7.  8.  9. 16.]\n",
-      "unique numbers in new img patchwise  [7. 8.]\n",
-      "unique numbers in new img patchwise  [5. 7. 8.]\n",
-      "unique numbers in new img patchwise  [1. 7. 8.]\n",
-      "unique numbers in new img patchwise  [1. 7. 8.]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 68\u001b[0m\n\u001b[1;32m     66\u001b[0m new_img_patchwise \u001b[38;5;241m=\u001b[39m quantize_to_patch_level(new_img_pixelwise)\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m#aggregate to patches and colour it, we want the colours which are used in curr_scan id\u001b[39;00m\n\u001b[0;32m---> 68\u001b[0m new_img_colour \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_color_img_from_obj_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_img_patchwise\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munique numbers in new img patchwise \u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39munique(new_img_patchwise))\n\u001b[1;32m     72\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;124;03maccess the gt of the image and get the accuracy of the prediction, print result and display \u001b[39;00m\n\u001b[1;32m     74\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[5], line 4\u001b[0m, in \u001b[0;36mcreate_color_img_from_obj_id\u001b[0;34m(data_dir, scan_id, obj_id_mat)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_color_img_from_obj_id\u001b[39m(data_dir,scan_id,obj_id_mat):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m#access the mesh file to get the colour of the ids\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m     colour_dict \u001b[38;5;241m=\u001b[39m \u001b[43mget_id_colours\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscan_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#initialize the new matrix \u001b[39;00m\n\u001b[1;32m      6\u001b[0m     og_height, og_width \u001b[38;5;241m=\u001b[39m obj_id_mat\u001b[38;5;241m.\u001b[39mshape\n",
-      "Cell \u001b[0;32mIn[4], line 5\u001b[0m, in \u001b[0;36mget_id_colours\u001b[0;34m(data_dir, scan_id)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_id_colours\u001b[39m(data_dir,scan_id):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m#access the mesh file to get the colour of the ids\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     mesh_file \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(data_dir,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscenes\u001b[39m\u001b[38;5;124m\"\u001b[39m, scan_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabels.instances.annotated.v2.ply\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m     ply_data \u001b[38;5;241m=\u001b[39m \u001b[43mplyfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPlyData\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmesh_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Extract vertex data\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     vertices \u001b[38;5;241m=\u001b[39m ply_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvertex\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:397\u001b[0m, in \u001b[0;36mPlyData.read\u001b[0;34m(stream, mmap)\u001b[0m\n\u001b[1;32m    395\u001b[0m     data \u001b[38;5;241m=\u001b[39m PlyData\u001b[38;5;241m.\u001b[39m_parse_header(stream)\n\u001b[1;32m    396\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m elt \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m--> 397\u001b[0m         \u001b[43melt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbyte_order\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmmap\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    398\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    399\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m must_close:\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:642\u001b[0m, in \u001b[0;36mPlyElement._read\u001b[0;34m(self, stream, text, byte_order, mmap)\u001b[0m\n\u001b[1;32m    640\u001b[0m dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdtype(byte_order)\n\u001b[1;32m    641\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m text:\n\u001b[0;32m--> 642\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_read_txt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    643\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m mmap \u001b[38;5;129;01mand\u001b[39;00m _can_mmap(stream) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_have_list:\n\u001b[1;32m    644\u001b[0m     \u001b[38;5;66;03m# Loading the data is straightforward.  We will memory map\u001b[39;00m\n\u001b[1;32m    645\u001b[0m     \u001b[38;5;66;03m# the file in copy-on-write mode.\u001b[39;00m\n\u001b[1;32m    646\u001b[0m     num_bytes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcount \u001b[38;5;241m*\u001b[39m dtype\u001b[38;5;241m.\u001b[39mitemsize\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:694\u001b[0m, in \u001b[0;36mPlyElement._read_txt\u001b[0;34m(self, stream)\u001b[0m\n\u001b[1;32m    692\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproperties:\n\u001b[1;32m    693\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 694\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data[prop\u001b[38;5;241m.\u001b[39mname][k] \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_from_fields\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfields\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    695\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[1;32m    696\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m PlyElementParseError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mearly end-of-line\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    697\u001b[0m                                    \u001b[38;5;28mself\u001b[39m, k, prop)\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:918\u001b[0m, in \u001b[0;36mPlyListProperty._from_fields\u001b[0;34m(self, fields)\u001b[0m\n\u001b[1;32m    914\u001b[0m (len_t, val_t) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist_dtype()\n\u001b[1;32m    916\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(_np\u001b[38;5;241m.\u001b[39mdtype(len_t)\u001b[38;5;241m.\u001b[39mtype(\u001b[38;5;28mnext\u001b[39m(fields)))\n\u001b[0;32m--> 918\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43m_np\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloadtxt\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m_islice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfields\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mndmin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    919\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) \u001b[38;5;241m<\u001b[39m n:\n\u001b[1;32m    920\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/numpy/lib/npyio.py:1351\u001b[0m, in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[1;32m   1349\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(comment, (\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mbytes\u001b[39m)):\n\u001b[1;32m   1350\u001b[0m         comment \u001b[38;5;241m=\u001b[39m [comment]\n\u001b[0;32m-> 1351\u001b[0m     comment \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m   1352\u001b[0m         x\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatin1\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mbytes\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m comment]\n\u001b[1;32m   1353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(delimiter, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[1;32m   1354\u001b[0m     delimiter \u001b[38;5;241m=\u001b[39m delimiter\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatin1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "unique numbers in new img patchwise  [ 1.  2.  4.  5.  6. 10. 11. 13. 14. 15. 16. 22.]\n"
      ]
     }
    ],
@@ -5294,7 +5278,7 @@
     "                # stor it to the corresponding frame\n",
     "                segmentation_info[frame_idx] = bounding_boxes\n",
     "\n",
-    "print(\"segmentation info\", segmentation_info)\n",
+    "#print(\"segmentation info\", segmentation_info)\n",
     "id_matches = {}\n",
     "matches_path = osp.join(\"/media/ekoller/T7/Predicted_Matches\", new_scan_id + \".h5\")\n",
     "with h5py.File(matches_path, 'r') as hdf_file:\n",
