--- a/sceneGraph_update/result_overview.ipynb
+++ b/sceneGraph_update/result_overview.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -17,18 +17,30 @@
      "output_type": "stream",
      "text": [
       "Precision\n",
+      "Votes          2\n",
+      "Poitns          \n",
+      "35      0.664408\n",
       "\n",
       "Recall\n",
+      "Votes          2\n",
+      "Points          \n",
+      "35      0.781117\n",
       "\n",
       "F1\n",
+      "Votes          2\n",
+      "Poitns          \n",
+      "35      0.705203\n",
       "\n",
       "Box IoU\n",
+      "Votes          2\n",
+      "Poitns          \n",
+      "35      0.272972\n",
       "\n",
       "Center Distance\n",
       "Votes          2\n",
       "Poitns          \n",
       "35      0.853369\n",
-      "The highest F1 score is 0.6794, achieved at threshold 35 and K-Means value 2.\n"
+      "The highest F1 score is 0.7052, achieved at threshold 35 and K-Means value 2.\n"
      ]
     }
    ],
@@ -80,7 +92,7 @@
     "# final_boxes.extend(result.get(\"box_iou\", None))\n",
     "# final_centers.extend(result.get(\"box_iou\", None))\n",
     "\n",
-    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction_TEST.pkl\")\n",
+    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction_TEST_only_ref.pkl\")\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
